fix: add margin-inline so that the spacing swaps in rtl

--- a/packages/select/src/FilterMultiSelect/components/Trigger/TriggerButtonBase/TriggerButtonBase.module.scss
+++ b/packages/select/src/FilterMultiSelect/components/Trigger/TriggerButtonBase/TriggerButtonBase.module.scss
@@ -10,5 +10,5 @@
 }
 
 .icon {
-  margin-left: $spacing-xs;
+  margin-inline-start: $spacing-xs;
 }
